--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~12.0.1",
+    "@angular/animations": "^12.0.5",
     "@angular/common": "~12.0.1",
     "@angular/compiler": "~12.0.1",
-    "@angular/core": "~12.0.1",
+    "@angular/flex-layout": "^13.0.0-beta.36",
     "@angular/forms": "~12.0.1",
+    "@angular/cdk": "~12.0.1",
+    "@angular/core": "~12.0.1",
+    "@angular/material": "~12.0.1",
     "@angular/platform-browser": "~12.0.1",
     "@angular/platform-browser-dynamic": "~12.0.1",
     "@angular/router": "~12.0.1",
+    "hammerjs": "^2.0.8",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
